--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
     <div class="wrapper vh-100 w-100 overflow-hidden">
         <header class="bg-dark">
             <div class="container h-100 d-flex justify-content-between align-items-center">
-                <h1>Campo minato</h1>
+                <h1><i class="me-3 fa-brands fa-playstation"></i>Campo minato</h1>
                 <form id="levelForm" class="d-flex align-items-center">
                     <div>
                         <label for="levelSelect">
                             Difficoltà
                         </label>
-                        <select class="bg-success text-white rounded-1 mx-3" name="levelSelect" id="levelSelect">
+                        <select class="bg-success text-white rounded-1 mx-3 fw-medium" name="levelSelect" id="levelSelect">
                             <option class="bg-black" value="easy">Easy</option>
                             <option value="medium">Medium</option>
                             <option value="hard">Hard</option>
                         </select>
                     </div>
-                    <button type="submit" class="btn btn-success">Play</button>
+                    <button type="submit" class="btn btn-warning fw-medium">Play</button>
                 </form>
             </div>
 
@@ -35,7 +35,7 @@
                 <div class="d-flex flex-wrap" id="playBoard">
 
                 </div>
-                <h3 id="score" class="w-100 text-center">Seleziona la difficoltà e premi play!</h3>
+                <div class="w-100 d-flex justify-content-center"><h3 id="score" class="py-2 px-4 text-center rounded-2 bg-success">Seleziona la difficoltà e premi Play</h3></div>
             </div>
         </main>
         <footer class="bg-dark">
